fix: tooltip overlap result

--- a/src/index.css
+++ b/src/index.css
@@ -144,3 +144,7 @@ html {
     font-weight: var(--font-weight);
     font-size: var(--font-size);
 }
+
+[class *="ant-tooltip"] {
+    z-index: 5;
+}
